# practice-Airflow

./: README.md  pyproject.toml
dags/: hello_world.py
logs/scheduler/: latest
